[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/Player/crosshair004.png" type="Texture" id=2]
[ext_resource path="res://Textures/Player/shotwand.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.8

[sub_resource type="CapsuleMesh" id=5]
radius = 0.8

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/WandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "machinegun shoot"
length = 0.36
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/WandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/WandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "shotgun shoot"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/WandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
current = true
fov = 90.0

[node name="GunRayContainer" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="GunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 5

[node name="ShotgunRayContainer" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast2" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast3" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast4" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast5" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast6" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast7" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="RayCast8" type="RayCast" parent="ShotgunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 5

[node name="MachinegunRayContainer" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="MachinegunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 5

[node name="RayCast2" type="RayCast" parent="MachinegunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 5

[node name="RayCast3" type="RayCast" parent="MachinegunRayContainer"]
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
"anims/machinegun shoot" = SubResource( 6 )
anims/shoot = SubResource( 4 )
"anims/shotgun shoot" = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="WandSprite" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 192, -145 )
scale = Vector2( 12, 12 )
texture = ExtResource( 3 )
hframes = 4

[node name="CrosshairTexture" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
